--- a/frontend/src/sass/partials/_tabs.scss
+++ b/frontend/src/sass/partials/_tabs.scss
@@ -17,8 +17,14 @@
   cursor: pointer;
   border-radius: 20px;
   outline: none;
+  margin-left: 10px;
+
+  &:first-child {
+    margin-left: 0;
+  }
 }
 
 .react-tabs__tab--selected {
-  background-color: var(--primary-color-5);
+  background-color: var(--blue-light-color);
+  border: 1px solid var(--primary-color);
 }
