feat: add events page

--- a/frontend/src/sass/partials/_colors.scss
+++ b/frontend/src/sass/partials/_colors.scss
@@ -10,6 +10,9 @@
   // Background
   --background-color: #EFF1F5;
 
+  // Blue Light
+  --blue-light-color: #F5F8FD;
+
   // Red
   --red-color: #BB4239;
   --red-color-rgb: 187, 66, 57;
