feat: connect components to redux

--- a/frontend/src/sass/LoginButton.scss
+++ b/frontend/src/sass/LoginButton.scss
@@ -9,6 +9,9 @@
   flex-direction: row;
   align-items: center;
   font-size: 1.1rem;
+  font-family: 'Work Sans', sans-serif;
+  outline: none;
+  border: none;
 }
 
 .LoginButton_icon {
