--- a/frontend/src/sass/PageHeader.scss
+++ b/frontend/src/sass/PageHeader.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .PageHeader_left {
@@ -27,4 +27,5 @@
   color: var(--primary-color);
   margin-left: 25px;
   display: flex;
+  cursor: pointer;
 }
