fix: add login button hover effect

--- a/frontend/src/sass/LoginButton.scss
+++ b/frontend/src/sass/LoginButton.scss
@@ -12,6 +12,10 @@
   font-family: 'Work Sans', sans-serif;
   outline: none;
   border: none;
+
+  &:hover {
+    opacity: 0.95;
+  }
 }
 
 .LoginButton_icon {
