feat: get user after auth

--- a/frontend/src/sass/UserInfo.scss
+++ b/frontend/src/sass/UserInfo.scss
@@ -12,6 +12,7 @@
   overflow: hidden;
   border-radius: 10px;
   margin-right: 17px;
+  flex-shrink: 0;
 
   img {
     width: 100%;
@@ -27,9 +28,10 @@
   color: var(--primary-color);
 
   &_name {
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 700;
     margin-bottom: 4px;
+    overflow-wrap: anywhere;
   }
 
   &_pod {
